# qa_guru_16_homework

./: README.md  pyproject.toml
homework_directory/project_with_poetry/: pyproject.toml
