[tool.poetry]
name = "project-with-poetry"
version = "0.1.0"
description = ""
authors = ["Aleksandr Slinkov <sanch971@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = ">=8.3.3"
selene = "2.0.0rc9"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
